Update github workflow

--- a/.composer-require-checker.config.json
+++ b/.composer-require-checker.config.json
@@ -47,6 +47,7 @@
     "GALETTE_NIGHTLY",
     "GALETTE_PHOTOS_PATH",
     "GALETTE_PLUGINS_PATH",
+    "GALETTE_PLUGINS_DATA_PATH",
     "GALETTE_ROOT",
     "GALETTE_TELEMETRY_URI",
     "GALETTE_TEMPIMAGES_PATH",
