--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -25,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: [ '8.1', '8.4' ]
+        php-versions: [ '8.2', '8.4' ]
         coverage: [none]
       fail-fast: false
 
@@ -75,7 +75,7 @@ jobs:
           ../../vendor/bin/phpcs lib/ ./*.php
 
       - name: CS Fixer
-        if: matrix.php-versions == '8.1'
+        if: matrix.php-versions == '8.2'
         run: |
           cd galette-core/galette/plugins/plugin-stripe
           ../../vendor/bin/php-cs-fixer check --show-progress=dots --verbose --diff
@@ -112,18 +112,18 @@ jobs:
           #enable coverage on higher stable php version with higher postrgesql version
           #higher stable php version
           - { php-version: "8.4", db-image: "postgres:13", coverage: none, always: true }
-          - { php-version: "8.4", db-image: "postgres:17", coverage: none, always: true }
+          - { php-version: "8.4", db-image: "postgres:18", coverage: none, always: true }
           - { php-version: "8.4", db-image: "mysql:8.0", coverage: none, always: true }
-          - { php-version: "8.4", db-image: "mysql:9.1", coverage: none, always: false }
-          - { php-version: "8.4", db-image: "mariadb:10.5", coverage: none, always: true }
-          - { php-version: "8.4", db-image: "mariadb:11.6", coverage: none, always: false }
+          - { php-version: "8.4", db-image: "mysql:9.4", coverage: none, always: true }
+          - { php-version: "8.4", db-image: "mariadb:10.6", coverage: none, always: true }
+          - { php-version: "8.4", db-image: "mariadb:12.0", coverage: none, always: true }
           #lower php version
-          - { php-version: "8.1", db-image: "postgres:13", coverage: none, always: false }
-          - { php-version: "8.1", db-image: "postgres:17", coverage: none, always: false }
-          - { php-version: "8.1", db-image: "mysql:8.0", coverage: none, always: false }
-          - { php-version: "8.1", db-image: "mysql:9.1", coverage: none, always: false }
-          - { php-version: "8.1", db-image: "mariadb:10.5", coverage: none, always: false }
-          - { php-version: "8.1", db-image: "mariadb:11.6", coverage: none, always: false }
+          - { php-version: "8.2", db-image: "postgres:13", coverage: none, always: true }
+          - { php-version: "8.2", db-image: "postgres:18", coverage: none, always: true }
+          - { php-version: "8.2", db-image: "mysql:8.0", coverage: none, always: true }
+          - { php-version: "8.2", db-image: "mysql:9.4", coverage: none, always: true }
+          - { php-version: "8.2", db-image: "mariadb:10.6", coverage: none, always: true }
+          - { php-version: "8.2", db-image: "mariadb:12.0", coverage: none, always: true }
       fail-fast: false
 
     env:
