--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Galette Stripe
-description: Plugin de paiement utilisant l'API de Stripe
+description: Plugin to handle membership fees and donations payments with Stripe.
