--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -64,9 +64,9 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd galette-core/galette
+          cd galette-core
           composer install --ignore-platform-reqs
-          cd plugins/plugin-stripe
+          cd galette/plugins/plugin-stripe
           composer install --ignore-platform-reqs
 
       - name: CS
